# bozCore

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  project.config  tools.cmake
ext_build/: FindDBusCpp.cmake  Makefile.kc  boz-build.cmake  boz-dbus.cmake  boz-incgen.cmake  boz-install.cmake  boz-vars.cmake  checkDoxyFile.sh  checkLicense.sh
include/: CMakeLists.txt  boz_connect.h  boz_msg.h  boz_msg_queue.h  bozancillary.h  bozclient.h  bozconnection.h  bozmessage.h  boztree.h
package/: package.cmake
src/: CMakeLists.txt
src/MA5G/: CMakeLists.txt
src/MA5G/GPIO/include/: gpio.h
src/MA5G/GPIO/src/: CMakeLists.txt  gpio.cpp
src/MA5G/MA5G_logger/include/: Common_inc.h  MA5G_logger.h
src/MA5G/MA5G_logger/src/: CMakeLists.txt  MA5G_logger.cpp
src/MA5G/MEP_logger/: Makefile  README
src/MA5G/MEP_logger/include/: MEP_log_rc.h  MEP_logger.h  MEP_logger_init.h  appender_type_socket.h  layout_type_encrypted.h  rollingpolicy_type_complete.h
src/MA5G/MEP_logger/include/sd/: error.h
src/MA5G/MEP_logger/src/: CMakeLists.txt  MEP_log_rc.c  MEP_logger.c  MEP_logger_init.c  appender_type_socket.c  layout_type_encrypted.c  rollingpolicy_type_complete.c
src/MA5G/libGPIO/include/: GPIO_exception.h  Lib_GPIO.h
src/MA5G/libGPIO/src/: CMakeLists.txt  GPIO_exception.cpp  Lib_GPIO.cpp
src/bozancillary/: CMakeLists.txt  boz_ancil_recv_fds.c  boz_ancil_send_fds.c  boz_ancillary_p.c  boz_ancillary_p.h
src/bozboost/: CMakeLists.txt  MA5G_Thread.cpp  MA5G_Thread.doxy  MA5G_Thread.hpp  MA5G_ThreadAbstract.cpp  MA5G_ThreadAbstract.hpp  MyAppClass.cpp  MyAppClass.hpp  MyAppThread.cpp  MyAppThread.hpp  bozApp.cpp  bozApp.hpp  bozAppAbstract.cpp  bozAppAbstract.hpp  main.cpp
src/bozboost/dbus/: CMakeLists.txt  Morpho.MA5G.MyDBusClass.xml  MyDBusClass-adaptor.hpp  MyDBusClass-proxy.hpp  MyDBusClassClient.cpp  MyDBusClassClient.hpp  MyDBusClassServer.cpp  MyDBusClassServer.hpp  dbus-client.cpp  dbus-server.cpp
src/bozboost/doc/: MA5G_Thread.doxy  main.doxy
src/bozboost/example/: MyAppClass.hpp  MyAppThread.cpp  MyAppThread.hpp  main.cpp
src/bozboost/shadow/: CMakeLists.txt  ShadowInternal.cpp  ShadowInternal.hpp  ShadowPublic.cpp  ShadowPublic.hpp  main.cpp
src/bozboost/state_machine/: CMakeLists.txt
src/bozboost/state_machine/inc/: BaseState.hpp  BaseTransition.hpp  State.hpp  StateMachine.hpp  dbus_statemachine.hpp
src/bozboost/state_machine/src/: BaseState.cpp  BaseTransition.cpp  State.cpp  StateMachine.cpp  StateMachinePrivate.cpp  dbus_statemachine.cpp
src/bozboost/state_machine/src/priv/: StateMachinePrivate.hpp
src/bozboost/state_machine/test/: main.cpp
src/bozboost/thread/: MA5G_ThreadAbstract.cpp  MA5G_ThreadAbstract.hpp
src/bozboost/working_thread/: CMakeLists.txt
src/bozboost/working_thread/inc/thread/: bulk_thread.hpp  working_thread.h  working_thread.hpp
src/bozboost/working_thread/inc/thread/detail/: thread_lin.cpp  thread_lin.h  thread_lin.hpp  thread_os.h  thread_os.hpp  thread_win.cpp  thread_win.h  thread_win.hpp
src/bozboost/working_thread/src/: bulk_thread.cpp  event_status.cpp  thread_lin.cpp  thread_os.cpp  thread_win.cpp  working_thread.cpp
src/bozboost/working_thread/src/priv/: event_status.hpp
src/bozboost/working_thread/test/: main.cpp
src/bozclient/: CMakeLists.txt  bozclient-internal.h  bozclient_default_cb.c  bozclient_end.c  bozclient_init.c  bozclient_put.c  bozclient_putmsg.c  bozclient_putmsgv.c  bozclient_putv.c  bozclient_send.c  bozclient_sendv.c  bozclient_server_ack.c  bozclient_server_init.c  bozclient_start.c  bozclient_start_async.c  bozclient_start_cb.c  bozclient_syncify.c  bozclient_zero.c
src/bozconnection/: CMakeLists.txt  bozconnection_free.c  bozconnection_init.c  bozconnection_zero.c
src/bozmessage/: CMakeLists.txt  bozmessage_handle.c  bozmessage_internal.h  bozmessage_put.c  bozmessage_receive.c  bozmessage_receiver_0.c  bozmessage_receiver_free.c  bozmessage_receiver_getfd.c  bozmessage_receiver_init.c  bozmessage_receiver_zero.c  bozmessage_sender_1.c  bozmessage_sender_flush.c  bozmessage_sender_free.c  bozmessage_sender_getfd.c  bozmessage_sender_init.c  bozmessage_sender_timed_flush.c  bozmessage_sender_x.c  bozmessage_sender_zero.c  bozmessage_timed_handle.c  bozmessage_timed_receive.c  bozmessage_unput.c  bozmessage_v_zero.c  bozmessage_zero.c
src/boztree/: CMakeLists.txt  boztree_check.c  boztree_cmp_f.c  boztree_data.c  boztree_delete.c  boztree_dtok_f.c  boztree_free.c  boztree_id_zero.c  boztree_init.c  boztree_insert.c  boztree_internal.h  boztree_zero.c
src/connect/: CMakeLists.txt  boz_connect_events.c  boz_connect_fd.c  boz_connect_flush.c  boz_connect_get.c  boz_connect_new.c  boz_connect_p.c  boz_connect_p.h  boz_connect_put.c  boz_connect_read_io.c  boz_connect_read_ioska.c  boz_connect_release.c  boz_connect_type.c  boz_connect_write_io.c  boz_connect_yield.c
src/msg/: CMakeLists.txt  boz_msg_append.c  boz_msg_dup.c  boz_msg_lg.c  boz_msg_load.c  boz_msg_new.c  boz_msg_p.c  boz_msg_p.h  boz_msg_payload.c  boz_msg_release.c  boz_msg_type.c  boz_msg_ulong.c  boz_msg_ushort.c  boz_msg_vsprintf.c
src/msgq/: CMakeLists.txt  boz_queue_new.c  boz_queue_p.c  boz_queue_p.h  boz_queue_release.c
test/: CMakeLists.txt
test/bozmessage/: CMakeLists.txt  init_fini.c  init_fini.cmake
test/boztree/: init_fini.c  init_fini.cmake
test/connect/: CMakeLists.txt  append.c  append.cmake  init_fini.c  init_fini.cmake
test/msg/: CMakeLists.txt  append.c  append.cmake  init_fini.c  init_fini.cmake
